# maintenance-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  decorators.py  logging_config.py
app/handlers/: admin.py  common.py  request.py
app/models/: request.py  user.py
app/services/: google_api.py  notification_service.py  user_service.py
tests/core/: test_decorators.py
tests/handlers/: test_admin_handlers.py
tests/services/: test_user_service.py
